src/app/components/shared/nav-bar/nav-bar.component.scss
@import '../../../../styles/_fonts.scss';
@import '../../../../styles/_dimns.scss';
@import '../../../../styles/_colors.scss';

.nav-container {
    height: 84px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;

    .logo-container {
        display: flex;
        flex-direction: row;

        transition: all $anim-time ease;

        .logo-s {
            @include font-regular($prime-text, $text-thin);
            color: $color-black;
            font-size: larger;
        }
            
        .logo-e {
            @include font-regular($prime-text, $text-semibold);
            color: $color-accent;
            font-size: larger;
        }

        &:hover {
            transform: scale(1.1);
        }
    }

    .control-container {
        display: flex;
        flex-direction: row;
        gap: $nav-gap;
        align-items: center;
        height: 100%;

        .links-container {
            display: flex;
            flex-direction: row;
            height: 100%;
            gap: $nav-gap;
            align-items: center;

            .nav-link, .nav-sub-link {
                @include font-regular($prime-text);
                font-size: medium;
                transition: all $anim-time ease;
    
                &:hover {
                    color: $color-accent;
                }
            }

            .link-container {
                height: 100%;
                display: flex;
                flex-direction: row;
                align-items: center;
                gap: 2px;
                position: relative;
                z-index: 1;

                .nav-link-icon {
                    transition: all $anim-time ease;
                }

                .active {
                    color: $color-accent;
                    transform: rotate(180deg);
                }

                &:hover {
                    .nav-link {
                        color: $color-accent;
                    }

                    .nav-link-icon {
                        color: $color-accent;
                        transform: rotate(180deg);
                    }

                    .hover-container {
                        display: flex;
                        opacity: 1;
                    }
                }

                .hover-container {
                    min-width: 160px;
                    position: absolute;
                    display: none;
                    flex-direction: column;
                    margin-top: 140px;
                    margin-left: -16px;
                    padding: 16px;
                    border-radius: 8px;
                    gap: 16px;
                    box-shadow: $shadow-card;
                    z-index: 4;
                    opacity: 0;

                    transition: all $anim-time ease;

                    &:hover {
                        display: flex;
                        opacity: 1;
                    }
                }
            }
        }

        .quick-btn-container {
            display: flex;
            flex-direction: row;
            gap: 8px;

            .control-btn {
                height: 48px;
                width: 48px;
                border: none;
                border-radius: 24px;
                background-color: $color-accent;
                transition: all $anim-time ease;

                &:hover {
                    background-color: $color-accent-h;
                    box-shadow: $shadow-card;
                }

                .icon {
                    font-size: 24px;
                    color: $color-off-white;
                }
            }

            .large {
                width: auto;
                padding: 0 24px;

                span {
                    color: $color-off-white;
                    font-size: medium;
                }
            }
        }
    }


}

